--- a/en-EN/wiki/advpyrolyse.html
+++ b/en-EN/wiki/advpyrolyse.html
@@ -51,7 +51,7 @@
                 <nav id="nav-menu-container">
                     <ul class="nav-menu">
                         <li><a href="../home">Home</a></li>
-                        <li><a href="../about">About</a></li>
+                        <li><a href="../about">About us</a></li>
                         <li><a href="../download">Download</a></li>
                         <li class="menu-has-children"><a class="active" href="">Wiki</a>
                             <ul>
@@ -76,7 +76,7 @@
                     <div class="tab-wiki menu" style="float: left;">
                         <button class="tablinks" id="defaultOpen" onclick="openCity(event, 'Description')">Description
                         </button>
-                        <button class="tablinks" onclick="openCity(event, 'Mechanics')">Mechanics of work</button>
+                        <button class="tablinks" onclick="openCity(event, 'Mechanics')">Uses/Functions</button>
                         <button class="tablinks" onclick="openCity(event, 'Schematics')">Construction</button>
                     </div>
                 </div>
@@ -169,12 +169,14 @@
                         The rest of the service hatches are not required.
                         <hr>
 
-                        <p>To enable the hologram (hint when building), use the Multiblock Machine Blueprint
+                        <p>
+                            To enable the hologram (hint when building), use the Multiblock Machine Blueprint
                             from the TecTech mod, click it on the multiblock controller.
                         </p>
 
                         <p style="font-weight: bold; margin-bottom: -5px">Important!</p>
-                        <p>Since it is possible to install only one Output Hatch in the structure, the question arises
+                        <p>
+                            Since it is possible to install only one Output Hatch in the structure, the question arises
                             of how to output all fluids (5 types) from one hatch. It is recommended to use multi-pipes
                             (Nonuple Fluid Pipe).
                         </p>
