--- a/index.html
+++ b/index.html
@@ -29,11 +29,20 @@
     <link href="css/animate.min.css" rel="stylesheet">
     <link href="css/owl.carousel.css" rel="stylesheet">
     <link href="css/main.css" rel="stylesheet">
+    <style>
+   body {
+    background: url(img/banner-img.png) no-repeat;
+    -moz-background-size: 100%; /* Firefox 3.6+ */
+    -webkit-background-size: 100%; /* Safari 3.1+ и Chrome 4.0+ */
+    -o-background-size: 100%; /* Opera 9.6+ */
+    background-size: 100%; /* Современные браузеры */
+   }
+  </style>
+
 
 </head>
 
 <body>
-
 <!-- Start Preloader Area -->
 <div class="preloader-area">
     <div class="loader-box">
@@ -41,8 +50,7 @@
     </div>
 </div>
 <!-- End Preloader Area -->
-<section class="slider" id="slider"
-         style="background: url('img/bg1002.png'); min-height: 90vh; background-size:cover;">
+<section class="slider" id="slider">
     <div class="container">
         <div class="row">
             <div class="col-md-7 col-sm-12 col-xs-12">
@@ -62,16 +70,6 @@
         </div>
     </div>
 </section>
-
-<!-- End banner Area -->
-<!-- ####################### Start Scroll to Top Area ###################### -->
-<div id="back-top">
-    <a href="#" title="Go to Top">
-        <i class="ti-angle-double-up"></i>
-    </a>
-</div>
-<!-- ####################### End Scroll to Top Area ####################### -->
-
 <script src="js/vendor/jquery-2.2.4.min.js"></script>
 <script src="js/vendor/bootstrap.min.js"></script>
 <script src="js/easing.min.js"></script>
