--- a/en-EN/about.html
+++ b/en-EN/about.html
@@ -47,7 +47,7 @@
                 <nav id="nav-menu-container">
                     <ul class="nav-menu">
                         <li><a href="home">Home</a></li>
-                        <li><a class="active" href="about">About</a></li>
+                        <li><a class="active" href="about">About us</a></li>
                         <li><a href="download">Download</a></li>
                         <li class="menu-has-children"><a href="">Wiki</a>
                             <ul>
@@ -67,7 +67,7 @@
     <div class="container">
         <div class="row d-flex align-items-center justify-content-center">
             <div class="about-content col-lg-12">
-                <h1 class="text-white">ABOUT</h1>
+                <h1 class="text-white">ABOUT US</h1>
                 <p>WHAT IS IMPACT?</p>
             </div>
         </div>
