--- a/en-EN/download.html
+++ b/en-EN/download.html
@@ -49,7 +49,7 @@
                 <nav id="nav-menu-container">
                     <ul class="nav-menu">
                         <li class=""><a href="home">Home</a></li>
-                        <li><a class="" href="about">About</a></li>
+                        <li><a class="" href="about">About us</a></li>
                         <li><a class="active" href="download">Download</a></li>
                         <li class="menu-has-children"><a href="">Wiki</a>
                             <ul>
