--- a/en-EN/home.html
+++ b/en-EN/home.html
@@ -53,7 +53,7 @@
                 <nav id="nav-menu-container">
                     <ul class="nav-menu">
                         <li class=""><a class="active" href="home">Home</a></li>
-                        <li><a href="about">About</a></li>
+                        <li><a href="about">About us</a></li>
                         <li><a href="download">Download</a></li>
                         <li class="menu-has-children"><a href="">Wiki</a>
                             <ul>
