--- a/en-EN/wiki/CommunicationTower.html
+++ b/en-EN/wiki/CommunicationTower.html
@@ -46,16 +46,16 @@
         <div class="container main-menu">
             <div class="row align-items-center d-flex">
                 <div id="logo">
-                    <a href="../home"><img alt="" src="../logo.png" title=""/></a>
+                    <a href="../home"><img alt="" src="../../img/logo.png" title=""/></a>
                 </div>
                 <nav id="nav-menu-container">
                     <ul class="nav-menu">
-                        <li><a href="../home">Главная</a></li>
-                        <li><a href="../about">О модпаке</a></li>
-                        <li><a href="../download">Скачать</a></li>
+                        <li><a href="../home">Home</a></li>
+                        <li><a href="../about">About us</a></li>
+                        <li><a href="../download">Download</a></li>
                         <li class="menu-has-children"><a class="active" href="">Wiki</a>
                             <ul>
-                                <li><a href="gt-addons">GregTech и аддоны</a></li>
+                                <li><a class="active">GregTech and Addons</a></li>
                             </ul>
                         </li>
                     </ul>
@@ -72,13 +72,12 @@
             <div class="col-lg-12">
                 <div class="section-title text-center">
                     <h1 class="p-black">Communication Tower</h1>
-                    <h4 class="p-black">Коммуникационная Вышка</h4>
                     <hr>
                     <div class="tab-wiki menu" style="float: left;">
-                        <button class="tablinks" id="defaultOpen" onclick="openCity(event, 'Description')">Описание
+                        <button class="tablinks" id="defaultOpen" onclick="openCity(event, 'Description')">Description
                         </button>
-                        <button class="tablinks" onclick="openCity(event, 'Mechanics')">Механика работы</button>
-                        <button class="tablinks" onclick="openCity(event, 'Schematics')">Постройка</button>
+                        <button class="tablinks" onclick="openCity(event, 'Mechanics')">Uses/Functions</button>
+                        <button class="tablinks" onclick="openCity(event, 'Schematics')">Construction</button>
                     </div>
                 </div>
             </div>
@@ -90,12 +89,12 @@
                     <div id="bg-left"></div>
                     <div id="bg-right"></div>
                     <div id="content-left">
-                        Коммуникационная Вышка позволяет настроить беспроводную связь
-                        между спутником на орбите и механизмами на земле.
+                        The Communication Tower allows wireless communication between the satellite in orbit
+                        and machines on the "Earth".
                     </div>
                     <div id="content-right">
                         <img class="img-fluid" src="../../img/wiki/ParTower.png">
-                        <p>Коммуникационная Вышка<br>(свободная структура)</p>
+                        <p>Communication Tower<br>(Arbitrary structure)</p>
                     </div>
                 </div>
             </div>
@@ -107,29 +106,28 @@
                     <div id="bg-left"></div>
                     <div id="bg-right"></div>
                     <div id="content-left">
-                        Для работы с вышкой, вам нужно подготовится:
-                        <br>    - Установка <a href="SpaceSatellite">Космического Спутника</a>
+                        To work with the tower, you need to prepare:
+                        <br>    - Installation <a href="SpaceSatellite">Space Satellite</a>
                         <hr>
-                        <p style="font-weight: bold; margin-bottom: -5px">Принцип работы:</p>
+                        <p style="font-weight: bold; margin-bottom: -5px">Principle of operation:</p>
                         <p style="padding-top: 10px">
-                            После установки Космического Спутника вы должны настроить частоту
-                            с помощью Ноутбука (Laptop).
+                            After installing the Space Satellite, you must tune the frequency using your Laptop.
                         </p>
                         <p style="padding-top: 10px">
-                            Для настройки подключения используется Коммуникационный Приемник (Communication Receiver).
-                            Частота должна совпадать с частотой спутника. Для установки связи нужно поключить все 4 приемника.
+                            Communication Receiver is used to configure the connection. The frequency must match
+                            the satellite frequency. To establish communication, you need to connect all 4 receivers.
                         </p>
 
-                        <p style="font-weight: bold; margin-bottom: -5px">Важно!</p>
+                        <p style="font-weight: bold; margin-bottom: -5px">Important!</p>
                         <p style="padding-top: 10px">
-                            У вышки есть радиус работы - 256 блоков, считается от контролера.<br>
-                            Несколько вышек могут быть подключены на одну частоту - частоту спутника.<br>
-                            Вышка не требует электрического питания.
+                            The tower has a radius of operation - 256 blocks, it is counted from the controller.<br>
+                            Several towers can be connected to one frequency - the satellite frequency.<br>
+                            The tower does not require electrical power.
                         </p>
                     </div>
                     <div id="content-right">
                         <img class="img-fluid" src="../../img/wiki/connectTowerSattelite.gif" style=" box-shadow: 0 0 8px 0px rgba(0,0,0,.6);">
-                        <p style="padding-top: 10px; padding-bottom: 8px">Настройка частоты для подключения Коммуникационной Вышки к спутнику</p>
+                        <p style="padding-top: 10px; padding-bottom: 8px">Setting the frequency for connecting the Communication Tower to the satellite</p>
                     </div>
                 </div>
             </div>
@@ -137,25 +135,24 @@
 
         <div class="tabcontent-wiki2" id="Schematics">
             <div class="row wiki">
-
                 <div id="wiki-content">
                     <div id="bg-left"></div>
                     <div id="bg-right"></div>
                     <div id="content-left">
 
-                        Для постройки этого мультиблока вам понадобятся блоки: Tower Casing.
+                        To build this multiblock you will need blocks: Tower Casing.
                         <hr>
                         <li>Communication Receiver: 4x</li>
-                        Остальные люки обслуживания не требуются.
+                        The rest of the service hatches are not required.
                         <hr>
-                        <p style="font-weight: bold; margin-bottom: 5px">Важно!</p>
-                        Вышка имеет уникальное свойство - свободная структура.
-                        Основа и приемники вышки являются обязательными.
+                        <p style="font-weight: bold; margin-bottom: 5px">Important!</p>
+                        The tower has a unique property - arbitrary structure.
+                        Tower base and receivers are required.
 
                         <p style="padding-top: 5px">
-                            В голограмму встроена красивая модель вышки, которую можно построить.
-                            Для включения голограммы (подсказка при постройке) используйте Multiblock Machine Blueprint
-                            из мода TecTech, кликните им по контролеру мультиблока.
+                            Built into the hologram is a beautiful model of a tower that can be built.
+                            To enable the hologram (hint when building), use the Multiblock Machine Blueprint
+                            from the TecTech mod, click it on the multiblock controller.
                         </p>
 
                     </div>
@@ -167,8 +164,6 @@
                 </div>
             </div>
         </div>
-
-
     </div>
     </div>
 </section>
