--- a/en-EN/wiki/LargeGasTurbine.html
+++ b/en-EN/wiki/LargeGasTurbine.html
@@ -50,12 +50,12 @@
                 </div>
                 <nav id="nav-menu-container">
                     <ul class="nav-menu">
-                        <li><a href="../home">Главная</a></li>
-                        <li><a href="../about">О модпаке</a></li>
-                        <li><a href="../download">Скачать</a></li>
+                        <li><a href="../home">Home</a></li>
+                        <li><a href="../about">About us</a></li>
+                        <li><a href="../download">Download</a></li>
                         <li class="menu-has-children"><a class="active" href="">Wiki</a>
                             <ul>
-                                <li><a href="gt-addons">GregTech и аддоны</a></li>
+                                <li><a class="active">GregTech and Addons</a></li>
                             </ul>
                         </li>
                     </ul>
@@ -72,13 +72,11 @@
             <div class="col-lg-12">
                 <div class="section-title text-center">
                     <h1 class="p-black">Large Gas Turbine</h1>
-                    <h4 class="p-black">Большая газовая турбина</h4>
                     <hr>
                     <div class="tab-wiki menu" style="float: left;">
-                        <button class="tablinks" id="defaultOpen" onclick="openCity(event, 'Description')">Описание
-                        </button>
-                        <button class="tablinks" onclick="openCity(event, 'Mechanics')">Механика работы</button>
-                        <button class="tablinks" onclick="openCity(event, 'Schematics')">Постройка</button>
+                        <button class="tablinks" id="defaultOpen" onclick="openCity(event, 'Description')">Description</button>
+                        <button class="tablinks" onclick="openCity(event, 'Mechanics')">Uses/Functions</button>
+                        <button class="tablinks" onclick="openCity(event, 'Schematics')">Construction</button>
                     </div>
                 </div>
             </div>
@@ -90,24 +88,15 @@
                     <div id="bg-left"></div>
                     <div id="bg-right"></div>
                     <div id="content-left">
-                        Большая газовая турбина - это многоблочная машина-генератор, добавленная модификацией
-                        GregTech.</br>
-                        <hr>
-                        Турбина способна выработывать энергию, тратя при этом газ. Медленно разгоняется, используется
-                        для продолжительной выработки энергии.
-
-                        <p style="font-weight: bold; margin-bottom: -5px; padding-top: 10px; padding-bottom: 5px;">
-                            Важно!</p>
-                        Изменена механика работы по сравнению с официальной версией GregTech, внимательно прочитайте
-                        представленую информацию.
-
-
+                        The turbine is capable of generating energy, using gas.
+                        Accelerates slowly, used for continuous energy production.
+                        <p style="font-weight: bold; margin-bottom: -5px; padding-top: 10px; padding-bottom: 5px;">Important!</p>
+                        The mechanics of work have been changed compared to the official
+                        version of GregTech, please read the information provided carefully.
                     </div>
                     <div id="content-right">
-
                         <img class="img-fluid" src="../../img/wiki/GasLargeTrubine.png">
-                        <p>Large Gas Turbine в собранной форме</p>
-
+                        <p>Large Gas Turbine finished structure</p>
                     </div>
                 </div>
             </div>
@@ -119,61 +108,54 @@
                     <div id="bg-left"></div>
                     <div id="bg-right"></div>
                     <div id="content-left">
-                        Большая газовая турбина работает на различных газах.
+                        A large gas turbine runs on a variety of gases.
                         <hr>
 
-                        Турбине требуется ротор для работы. Есть множество их вариантов, различающихся по размеру,
-                        материалу, эффективности работы и модификатору оптимальной подачи.
-                        <p style="font-weight: bold; margin-bottom: -5px; padding-top: 10px; padding-bottom: 5px;">
-                            Важно!</p>
-                        Ротор является одноразовым, то есть вы вставляете его в интерфейс контролера турбины, турбина
-                        запоминает характеристики и удаляет ротор, характеристики сохраняются до тех пор, пока вы не
-                        сломаете контролер.
+                        The turbine requires a rotor to operate. There are many options available,
+                        differing in size, material, work efficiency and optimal flow modifier.
+                        <p style="font-weight: bold; margin-bottom: -5px; padding-top: 10px; padding-bottom: 5px;">Important!</p>
+                        The rotor is disposable, that is, you insert it into the interface of the turbine controller,
+                        the turbine remembers the characteristics and remove the rotor, the characteristics are retained
+                        until you break the controller.
 
-                        <p style="font-weight: bold; margin-bottom: -5px; padding-top: 10px; padding-bottom: 5px;">
-                            Эффективность:</p>
-                        Efficiency (Эффективность) - процентное отношение, влияющее на энергетический выход турбины.<br>
+                        <p style="font-weight: bold; margin-bottom: -5px; padding-top: 10px; padding-bottom: 5px;">Efficiency:</p>
+                        Efficiency - percentage influencing turbine energy output.<br>
 
 
-                        <p style="font-weight: bold; margin-bottom: -5px; padding-top: 10px; padding-bottom: 5px;">
-                            Оптимальный поток:</p>
-                        Optimal Flow (Оптимальный поток) - это размер потока, необходимый для достижения оптимального
-                        энергетического выхода турбины. У каждого ротора есть индивидуальное значение оптимального
-                        потока.
+                        <p style="font-weight: bold; margin-bottom: -5px; padding-top: 10px; padding-bottom: 5px;">Optimal flow:</p>
+                        Optimal Flow is the size of the flow required to achieve the optimal
+                        energy efficiency of the turbine. Each rotor has an individual optimal flow value.
 
-                        <p style="padding-top: 5px; margin-bottom: 5px; ">Так как турбина может принимать разный газ
-                            оптимальный поток указывается не в L/t, а в EU/t.</p>
+                        <p style="padding-top: 5px; margin-bottom: 5px; ">Since the turbine can receive different gas, the optimal
+                            flow is indicated not in L/t, but in EU/t.</p>
 
-                        Для газа используется Actual Optimal Flow (Реальный оптимальный поток), выполняется по
-                        формуле:<br>
+                        For gas, Actual Optimal Flow is used, performed by the formula:<br>
 
                         <b>Actual Optimal Flow (L/t) = Optimal Flow / (Fuel Value / 1000)</b>
 
-                        <p style="font-weight: bold; margin-bottom: -5px; padding-top: 10px; padding-bottom: 5px;">
-                            Энергоплотность газа:</p>
-                        Fuel Value (Энергоплотность). Определить её можно с помощью NEI, находим нужное нам топливо и
-                        смотрим использование в турбине, там показывается энергоемкость одной капсулы.
+                        <p style="font-weight: bold; margin-bottom: -5px; padding-top: 10px; padding-bottom: 5px;">Fuel Value:</p>
+                        You can determine Fuel Value using NEI, find the fuel we need and look
+                        at the use in the turbine, it shows the energy content of one capsule.
 
-                        <p style="font-weight: bold; margin-bottom: -5px; padding-top: 10px; padding-bottom: 5px;">
-                            Генерация энергии:</p>
-                        Генерация энергии выполняется по формуле: <br>
+                        <p style="font-weight: bold; margin-bottom: -5px; padding-top: 10px; padding-bottom: 5px;">Power generation:</p>
+                        Energy generation is performed according to the formula: <br>
                         <b>EU/t = Actual Optimal Flow * (Fuel Value / 1000) * (Efficiency / 100)</b>
                     </div>
                     <div id="content-right">
                         <p style="padding-top: 10px; padding-bottom: 8px">
-                            <b style="color: black;">Пример генерации энергии из газа</b>
+                            <b style="color: black;">An example of generating energy from gas</b>
                         </p>
                         <p style="text-align: justify;">
-                            Большой Ротор из материала Carbon с эффективностью - 120, с оптимальным потоком - 150 EU/t и
-                            Refinery Gas с энергоплотностью 128000 EU на капсулу.<br>
+                            Large Rotor made of Carbon with an efficiency of 120, with an optimal flow of
+                            150 EU/t and Refinery Gas with an energy density of 128,000 EU per capsule.<br>
                             <br>
-                            Реальный опимальный поток:<br>
+                            Actual Optimal Flow:<br>
                             <em>150 / (128000 / 1000) = 1 L/t.</em><br><br>
-                            Генерация энергии:<br>
+                            Power generation:<br>
                             <em>1 * (128000 / 1000) * (120 / 100) = 154 EU/t.</em>
                         </p>
                         <p style="padding-top: 10px; padding-bottom: 8px;">
-                            <b style="color: black;">Калькулятор генерации энергии из газа</b><br>
+                            <b style="color: black;">Gas Power Generation Calculator</b><br>
                         </p>
                         <input id="flow" placeholder="Optimal Flow (EU/t)" style="width: 100%; margin-bottom: 8px;"
                                type="text">
@@ -182,7 +164,7 @@
                         <input id="fuelvalue" placeholder="Fuel Value (in NEI)" style="width: 100%; margin-bottom: 8px;"
                                type="text">
 
-                        <button onclick="gasLargeTurbine()" style="margin-top: 10px;">Рассчитать</button>
+                        <button onclick="gasLargeTurbine()" style="margin-top: 10px;">Calculate</button>
                         <p id="FlowOk" style="margin: 4px 0;"></p>
                         <p id="FlowNotOk"></p>
                     </div>
@@ -197,18 +179,18 @@
                     <div id="bg-left"></div>
                     <div id="bg-right"></div>
                     <div id="content-left">
-                        Для постройки этого мультиблока вам понадобятся блок: Stainless Steel Turbine Casing.</br>
+                        To build this multiblock you will need blocks: Stainless Steel Turbine Casing.</br>
                         <hr>
-                        <li>Dynamo Hatch (Сзади по центру): 1x</li>
-                        <li>Maintenance Hatch (Сбоку по центру): 1x</li>
-                        <li>Input Hatch для ufpf (Сбоку по центру): 1x</li>
-                        <li>Muffler Hatch (Сбоку по центру): 1x</li>
-                        Остальные люки обслуживания не требуются.
-                        <hr>
+                        <li>Dynamo Hatch (Back center): 1x</li>
+                        <li>Maintenance Hatch (Side center): 1x</li>
+                        <li>Input Hatch for gases (Side center): 1x</li>
+                        <li>Muffler Hatch (Side center): 1x</li>
+                        The rest of the service hatches are not required.
 
-                        <p>Для включения голограммы (подсказка при постройке) используйте Multiblock Machine Blueprint
-                            из мода TecTech, кликните им по контролеру мультиблока.</p>
-
+                        <p style="padding-top: 5px">
+                            To enable the hologram (hint when building), use the Multiblock Machine Blueprint
+                            from the TecTech mod, click it on the multiblock controller.
+                        </p>
                     </div>
                     <div id="content-right">
                         <img class="img-fluid" src="../../img/wiki/StainlessSteel.png" width="150">
@@ -227,10 +209,10 @@
         <div class="row">
             <div class="col-lg-12">
                 <p class="footer-text">
-                <p class="p-white">
-                    Copyright &copy;<script>document.write(new Date().getFullYear());</script>
-                    | Made by 4gname
-                </p>
+                    <p class="p-white">
+                        Copyright &copy;<script>document.write(new Date().getFullYear());</script>
+                        | Made by 4gname
+                    </p>
                 </p>
             </div>
         </div>
