--- a/en-EN/wiki/ParallelSuperComputer.html
+++ b/en-EN/wiki/ParallelSuperComputer.html
@@ -35,16 +35,16 @@
         <div class="container main-menu">
             <div class="row align-items-center d-flex">
                 <div id="logo">
-                    <a href="../home"><img alt="" src="../../img/logo.png" title="" /></a>
+                    <a href="../home"><img alt="" src="../../img/logo.png" title=""/></a>
                 </div>
                 <nav id="nav-menu-container">
                     <ul class="nav-menu">
-                        <li><a href="../home">Главная</a></li>
-                        <li><a href="../about">О модпаке</a></li>
-                        <li><a href="../download">Скачать</a></li>
+                        <li><a href="../home">Home</a></li>
+                        <li><a href="../about">About us</a></li>
+                        <li><a href="../download">Download</a></li>
                         <li class="menu-has-children"><a class="active" href="">Wiki</a>
                             <ul>
-                                <li><a href="gt-addons">GregTech и аддоны</a></li>
+                                <li><a class="active">GregTech and Addons</a></li>
                             </ul>
                         </li>
                     </ul>
@@ -61,13 +61,11 @@
             <div class="col-lg-12">
                 <div class="section-title text-center">
                     <h1 class="p-black">Parallel Super Computer</h1>
-                    <h4 class="p-black">Супер Компьютер Параллельности</h4>
                     <hr>
                     <div class="tab-wiki menu" style="float: left;">
-                        <button class="tablinks" id="defaultOpen" onclick="openCity(event, 'Description')">Описание
-                        </button>
-                        <button class="tablinks" onclick="openCity(event, 'Mechanics')">Механика работы</button>
-                        <button class="tablinks" onclick="openCity(event, 'Schematics')">Постройка</button>
+                        <button class="tablinks" id="defaultOpen" onclick="openCity(event, 'Description')">Description</button>
+                        <button class="tablinks" onclick="openCity(event, 'Mechanics')">Uses/Functions</button>
+                        <button class="tablinks" onclick="openCity(event, 'Schematics')">Construction</button>
                     </div>
                 </div>
             </div>
@@ -79,22 +77,21 @@
                     <div id="bg-left"></div>
                     <div id="bg-right"></div>
                     <div id="content-left">
-                        Супер компьютер позволяет раздавать параллельность для машин Impact.
+                        The supercomputer allows parallels to be distributed to Impact machines.
                         <p style="padding-top: 10px"></p>
-                        Компьютер хранит параллельные поинты (Parallel Point, ПП), с возможностью
-                        их увеличения или расхода. Поинты нужны для раздачи параллельности машинам, каждая машина
-                        ограничена по количеству параллельности: 4, 16, 64, 256.
+                        The computer stores Parallel Point (PP), with the possibility of increasing or
+                        spending. Points are needed to distribute parallels to machines, each machine is limited by
+                        the number of parallels: 4, 16, 64, 256.
                         <p style="padding-top: 10px"></p>
-                        Что такое параллельность? Параллельность - способность одновременно
-                        выполнять однотипные действия в несколько потоков.
+                        What is parallel? Parallel is the ability to simultaneously perform the same
+                        type of actions in several threads.
                         <p style="padding-top: 10px"></p>
-                        Если рассматривать параллельность в игре, то это выполнение одного типа
-                        рецепта несколько раз за одно время (при это затрата энергии пропорциональна
-                        количеству выполняемых рецептов).
+                        If we consider parallels in the game, then this is the execution of one type of recipe several
+                        times at one time (while the energy consumption is proportional to the number of recipes being executed).
                     </div>
                     <div id="content-right">
                         <img class="img-fluid" src="../../img/wiki/ParComputer.png">
-                        <br>Компьютер в собранной форме<br> (минимальная структура)
+                        <br>Supercomputer finished structure<br> (minimal structure)
                     </div>
                 </div>
             </div>
@@ -106,51 +103,49 @@
                     <div id="bg-left"></div>
                     <div id="bg-right"></div>
                         <div id="content-left">
-                            Для работы с компьютером, вам нужно подготовится:
-                            <br>    - Установка <a href="SpaceSatellite">Космического Спутника</a><!-- todo ссылка -->
-                            <br>    - Установка <a href="CommunicationTower">Коммуникационной Вышки</a><!-- todo ссылка -->
+                            To work with a computer, you need to prepare:
+                            <br>    - Install <a href="SpaceSatellite">Space Satellite</a>
+                            <br>    - Install <a href="CommunicationTower">Communication Tower</a>
                             <hr>
-                            <p style="font-weight: bold; margin-bottom: -5px">Принцип работы:</p>
+                            <p style="font-weight: bold; margin-bottom: -5px">Principle of operation:</p>
                             <p style="padding-top: 10px">
-                                После установки Коммуникационной вышки вы должны настроить частоту на которой будет работать
-                                вышка, компьютер и машины с помощью Ноутбука (Laptop).
+                                After installing the communication tower, it is necessary to tune the frequency with
+                                which the tower, computer and machines will worked. Are tuned through the laptop.
                             </p>
                             <p style="padding-top: 10px">
-                                Для регулирования поинтов параллельности существует Компьютерная Стойка (Computer Rack).
-                                Компьютерная Стойка имеет 4 слота в которые помещаются Параллельные Процессоры (Parallel СPU).
-                                Существует 4 тира процессоров, которые вырабатывают: 4, 16, 64, 256 ПП.
+                                There is a Computer Rack to control the points of parallels. The Computer Rack has 4
+                                slots that fit the Parallel CPU. There are 4 types of processors that produce: 4, 16, 64, 256 PP.
                             </p>
                             <p style="padding-top: 10px">
-                                Для передачи параллельности служат Параллельные Передатчики (Parallel Transmitter).
-                                Параллельные Передатчики существуют 4 тира, которые передают: 4, 16, 64, 256 ПП.
-                                При установки передатчика, в компьютере сразу будет зарезервировано нужное количество
-                                ПП для работы передатчика.<br>
+                                Parallel Transmitter is used to transmit parallelism. Parallel Transmitter there are 4
+                                tiers that transmit: 4, 16, 64, 256 PP. When installing the transmitter, the computer
+                                will immediately reserve the required amount of PP for the transmitter to work.<br>
                             </p>
                             <p style="padding-top: 5px">
-                                Чтобы передать ПП в нужную вам машину нужно установить в нее Параллельный Приемник
-                                (Parallel Receiver). Далее кликнуть по Параллельному Приемнику с помощью ноутбука, а затем
-                                кликнуть по Параллельному Передатчику на компьютере.<br>
-                                Если приемник/передатчик горит красным - ошибка подключения или подключение отсутсвует,
-                                если горит желтым - успешное подключение.
+                                To transfer the PP to the machine you need, you need to install the Parallel Receiver in it.
+                                Next, click on the Parallel Receiver using your laptop and then click on the Parallel
+                                Transmitter on your computer.<br>
+                                If the receiver / transmitter is lit red - there is a connection error or there is no
+                                connection, if it is lit yellow - a successful connection.
                             </p>
                             <hr>
-                            <p style="font-weight: bold; margin-bottom: -5px">Важно!</p>
+                            <p style="font-weight: bold; margin-bottom: -5px">Important!</p>
                             <p style="padding-top: 5px">
-                                Потребление энергии компьютера считается по следующей формуле:<br>
-                                Потребление (EU/t) = 8192 + Максимальное ПП.<br>
-                                Максимальное ПП - сумарное число ПП от установленных в компьютер Параллельных Процессоров.
+                                The power consumption of a computer is calculated using the following formula:<br>
+                                Consumption (EU/t) = 8192 + Max PP.<br>
+                                Max PP - the total amount of PP from the Parallel Processors installed in the computer.
                             </p>
                         </div>
                     <div id="content-right">
 
                         <img class="img-fluid" src="../../img/wiki/connectTowerComp.gif" style=" box-shadow: 0 0 8px 0px rgba(0,0,0,.6);">
-                        <p style="padding-top: 10px; padding-bottom: 8px">Настройка частоты для подключения Компьютера к Коммуникационной Вышке</p>
+                        <p style="padding-top: 10px; padding-bottom: 8px">Setting the frequency for connecting the Computer to the Communication Tower</p>
 
                         <img class="img-fluid" src="../../img/wiki/ComputerRackGUI.png" style=" box-shadow: 0 0 8px 0px rgba(0,0,0,.6);">
-                        <p style="padding-top: 10px; padding-bottom: 8px">Параллельные Процессоры в Компьютерной Стойке</p>
+                        <p style="padding-top: 10px; padding-bottom: 8px">Parallel Processors in a Computer Rack</p>
 
                         <img class="img-fluid" src="../../img/wiki/connectMachineComp.gif" style=" box-shadow: 0 0 8px 0px rgba(0,0,0,.6);">
-                        <p style="padding-top: 10px; padding-bottom: 8px">Настройка передачи ПП с компьютера на машину</p>
+                        <p style="padding-top: 10px; padding-bottom: 8px">Setting up the transmit of PP from the computer to the machine</p>
                     </div>
                 </div>
             </div>
@@ -163,20 +158,22 @@
                     <div id="bg-left"></div>
                     <div id="bg-right"></div>
                     <div id="content-left">
-                        Для постройки этого мультиблока вам понадобятся блоки: Computer Casing и
+                        To build this multiblock you will need blocks: Computer Casing и
                         Empty Rack Casing.
                         <hr>
                         <li>Energy Hatch: 1x</li>
                         <li>Maintenance Hatch: 1x</li>
                         <li>Computer Rack: Nx</li>
                         <li>Parallel Transmitter: Nx</li>
-                        Остальные люки обслуживания не требуются.
+                        The rest of the service hatches are not required.
                         <hr>
-                        <p style="font-weight: bold; margin-bottom: 5px">Важно!</p>
-                        Структура компьютера может менятся (в длину), максимальная длина 16 блоков, минимальная - 2.
+                        <p style="font-weight: bold; margin-bottom: 5px">Important!</p>
+                        The structure of the computer can change (in length), the maximum length is 16 blocks, the minimum is 2.
 
-                        <p style="padding-top: 5px">Для включения голограммы (подсказка при постройке) используйте Multiblock Machine Blueprint
-                            из мода TecTech, кликните им по контролеру мультиблока.</p>
+                        <p style="padding-top: 5px">
+                            To enable the hologram (hint when building), use the Multiblock Machine Blueprint
+                            from the TecTech mod, click it on the multiblock controller.
+                        </p>
                     </div>
                     <div id="content-right">
                         <!-- todo casings -->
