--- a/en-EN/wiki/SpaceSatellite.html
+++ b/en-EN/wiki/SpaceSatellite.html
@@ -50,12 +50,12 @@
                 </div>
                 <nav id="nav-menu-container">
                     <ul class="nav-menu">
-                        <li><a href="../home">Главная</a></li>
-                        <li><a href="../about">О модпаке</a></li>
-                        <li><a href="../download">Скачать</a></li>
+                        <li><a href="../home">Home</a></li>
+                        <li><a href="../about">About us</a></li>
+                        <li><a href="../download">Download</a></li>
                         <li class="menu-has-children"><a class="active" href="">Wiki</a>
                             <ul>
-                                <li><a href="gt-addons">GregTech и аддоны</a></li>
+                                <li><a class="active">GregTech and Addons</a></li>
                             </ul>
                         </li>
                     </ul>
@@ -72,13 +72,11 @@
             <div class="col-lg-12">
                 <div class="section-title text-center">
                     <h1 class="p-black">SpaceSatellite</h1>
-                    <h4 class="p-black">Космический Спутник</h4>
                     <hr>
                     <div class="tab-wiki menu" style="float: left;">
-                        <button class="tablinks" id="defaultOpen" onclick="openCity(event, 'Description')">Описание
-                        </button>
-                        <button class="tablinks" onclick="openCity(event, 'Mechanics')">Механика работы</button>
-                        <button class="tablinks" onclick="openCity(event, 'Schematics')">Постройка</button>
+                        <button class="tablinks" id="defaultOpen" onclick="openCity(event, 'Description')">Description</button>
+                        <button class="tablinks" onclick="openCity(event, 'Mechanics')">Uses/Functions</button>
+                        <button class="tablinks" onclick="openCity(event, 'Schematics')">Construction</button>
                     </div>
                 </div>
             </div>
@@ -90,12 +88,11 @@
                     <div id="bg-left"></div>
                     <div id="bg-right"></div>
                     <div id="content-left">
-                        Космический Спутник позволяет настроить беспроводную связь
-                        между механизмами на земле.
+                        The Space Satellite allows for wireless communication between machines on earth.
                     </div>
                     <div id="content-right">
                         <img class="img-fluid" src="../../img/wiki/SpaceSatellite.png">
-                        <p>Космический Спутник в собранной форме</p>
+                        <p>Space Satellite finished structure</p>
                     </div>
                 </div>
             </div>
@@ -107,27 +104,27 @@
                     <div id="bg-left"></div>
                     <div id="bg-right"></div>
                     <div id="content-left">
-                        Для работы со Спутником, вам нужно подготовится:
-                        <br>    - Установка <a href="CommunicationTower">Коммуникационной Вышки</a>
+                        To work with satellite, you need to prepare:
+                        <br>    - Install <a href="CommunicationTower">Communication Tower</a>
                         <hr>
-                        <p style="font-weight: bold; margin-bottom: -5px">Принцип работы:</p>
+                        <p style="font-weight: bold; margin-bottom: -5px">Principle of operation:</p>
                         <p style="padding-top: 10px">
-                            После установки Космического Спутника вы должны настроить частоту
-                            с помощью Ноутбука (Laptop).
+                            After installing the Space Satellite, you must tune the frequency using your Laptop.
                         </p>
                         <p style="padding-top: 10px">
-                            Для настройки частоты используется Коммуникационный Передатчик (Communication Transmitter).
+                            Communication Transmitter is used for frequency setting.
                         </p>
-
-                        <p style="font-weight: bold; margin-bottom: -5px">Важно!</p>
+                        <p style="font-weight: bold; margin-bottom: -5px">Important!</p>
                         <p style="padding-top: 10px">
-                            Для игры достаточно одного спутника.<br>
-                            Спутник не требует электрического питания.
+                            One satellite is enough for the game.<br>
+                            The satellite does not require electrical power.
                         </p>
                     </div>
                     <div id="content-right">
                         <img class="img-fluid" src="../../img/wiki/connectSattelite.gif" style=" box-shadow: 0 0 8px 0px rgba(0,0,0,.6);">
-                        <p style="padding-top: 10px; padding-bottom: 8px">Настройка частоты для Космического Спутника</p>
+                        <p style="padding-top: 10px; padding-bottom: 8px">
+                            Setting the frequency for the Space Satellite
+                        </p>
                     </div>
                 </div>
             </div>
@@ -140,30 +137,26 @@
                     <div id="bg-left"></div>
                     <div id="bg-right"></div>
                     <div id="content-left">
-
-                        Для постройки этого мультиблока вам понадобятся блоки: Space Satellite Casing.
+                        To build this multiblock you will need blocks: Space Satellite Casing.
                         <hr>
                         <li>Communication Transmitter: 1x</li>
-                        Остальные люки обслуживания не требуются.
+                        The rest of the service hatches are not required.
                         <hr>
                         <p style="font-weight: bold; margin-bottom: 5px">Важно!</p>
-                        Спутник собирается только на орбите или (если отключена орбита в конфиге GalactiCraft) на луне.
+                        The satellite is builded only in orbit or (if orbit is disabled in the GalactiCraft config) on the moon.
                         <p style="padding-top: 5px">
-                            Для включения голограммы (подсказка при постройке) используйте Multiblock Machine Blueprint
-                            из мода TecTech, кликните им по контролеру мультиблока.
+                            To enable the hologram (hint when building), use the Multiblock Machine Blueprint
+                            from the TecTech mod, click it on the multiblock controller.
                         </p>
 
                     </div>
                     <div id="content-right">
-                        <!-- todo casings -->
                         <img class="img-fluid" src="../../img/wiki/SSCasing.png" width="150">
                         <p>Space Satellite Casing</p>
                     </div>
                 </div>
             </div>
         </div>
-
-
     </div>
     </div>
 </section>
