--- a/en-EN/wiki/cokeoven.html
+++ b/en-EN/wiki/cokeoven.html
@@ -50,12 +50,12 @@
                 </div>
                 <nav id="nav-menu-container">
                     <ul class="nav-menu">
-                        <li><a href="../home">Главная</a></li>
-                        <li><a href="../about">О модпаке</a></li>
-                        <li><a href="../download">Скачать</a></li>
+                        <li><a href="../home">Home</a></li>
+                        <li><a href="../about">About us</a></li>
+                        <li><a href="../download">Download</a></li>
                         <li class="menu-has-children"><a class="active" href="">Wiki</a>
                             <ul>
-                                <li><a href="gt-addons">GregTech и аддоны</a></li>
+                                <li><a class="active">GregTech and Addons</a></li>
                             </ul>
                         </li>
                     </ul>
@@ -72,13 +72,12 @@
             <div class="col-lg-12">
                 <div class="section-title text-center">
                     <h1 class="p-black">Coke Oven</h1>
-                    <h4 class="p-black">Коксовая печь</h4>
                     <hr>
                     <div class="tab-wiki menu" style="float: left;">
-                        <button class="tablinks" id="defaultOpen" onclick="openCity(event, 'Description')">Описание
+                        <button class="tablinks" id="defaultOpen" onclick="openCity(event, 'Description')">Description
                         </button>
-                        <button class="tablinks" onclick="openCity(event, 'Mechanics')">Механика работы</button>
-                        <button class="tablinks" onclick="openCity(event, 'Schematics')">Постройка</button>
+                        <button class="tablinks" onclick="openCity(event, 'Mechanics')">Uses/Functions</button>
+                        <button class="tablinks" onclick="openCity(event, 'Schematics')">Construction</button>
                     </div>
                 </div>
             </div>
@@ -90,17 +89,11 @@
                     <div id="bg-left"></div>
                     <div id="bg-right"></div>
                     <div id="content-left">
-                        Коксовая печь - это многоблочная машина, добавленная модификацией Impact Core.</br>
-                        <hr>
-                        Предназначена для производство древесного/коксового угля и креозота на начальных этапах.
-
-
+                        This machine is designed for the production of charcoal / coke coal and creosote in the early stages.
                     </div>
                     <div id="content-right">
-
                         <img class="img-fluid" src="../../img/wiki/cokeoven.png">
-                        <p>Coke Oven в собранной форме</p>
-
+                        <p>Coke Oven finished structure</p>
                     </div>
                 </div>
             </div>
@@ -112,12 +105,10 @@
                     <div id="bg-left"></div>
                     <div id="bg-right"></div>
                     <div id="content-left">
-                        Печь выполняет рецепты, которые можно увидеть в NEI.
+                        The oven carries out recipes that can be seen at NEI.
                         <hr>
-
-                        Необычной механики у данной машины нет.
-
-                        Важное замечание - все рецепты выполняются за одинаковое время: 90 секунд.
+                        This machine has no unusual mechanics.
+                        An important note - all recipes are completed in the same time: 90 seconds.
 
                     </div>
                     <div id="content-right">
@@ -125,12 +116,12 @@
                         <img class="img-fluid" src="../../img/wiki/coRecipe1.png"
                              style=" box-shadow: 0 0 8px 0px rgba(0,0,0,.6);">
 
-                        <p style="padding-top: 10px; padding-bottom: 8px">Коксование древесины</p>
+                        <p style="padding-top: 10px; padding-bottom: 8px">Wood coking</p>
 
                         <img class="img-fluid" src="../../img/wiki/coRecipe2.png"
                              style=" box-shadow: 0 0 8px 0px rgba(0,0,0,.6);">
 
-                        <p style="padding-top: 10px; padding-bottom: 8px">Коксование угля</p>
+                        <p style="padding-top: 10px; padding-bottom: 8px">Coal coking</p>
 
 
                     </div>
@@ -145,17 +136,23 @@
                     <div id="bg-left"></div>
                     <div id="bg-right"></div>
                     <div id="content-left">
-                        Для постройки этого мультиблока вам понадобится блок Coke Oven Brick.</br>
+                        To build this multiblock you will need blocks: Coke Oven Brick.</br>
                         <hr>
                         <li>Primitive Output Hatch x1</li>
                         <li>Primitive Output Bus x1</li>
                         <li>Primitive Input Bus x1</li>
                         <br>
-                        Люки обслуживания имеют такие же текстуры как и Coke Oven Brick.<br>
-                        Остальные люки обслуживания не требуются.<br>
+                        The service hatches have the same texture as the Coke Oven Brick.<br>
+                        The rest of the service hatches are not required.<br>
 
-                        <br>*Не забудьте включить мультиблок с помощью Soft Mallet
-                        <hr>
+                        <p style="padding-top: 5px">
+                            *Don't forget to enable multiblock with Soft Mallet
+                        </p>
+
+                        <p style="padding-top: 5px">
+                            To enable the hologram (hint when building), use the Multiblock Machine Blueprint
+                            from the TecTech mod, click it on the multiblock controller.
+                        </p>
 
                     </div>
                     <div id="content-right">
