--- a/en-EN/wiki/primwaterpump.html
+++ b/en-EN/wiki/primwaterpump.html
@@ -50,12 +50,12 @@
                 </div>
                 <nav id="nav-menu-container">
                     <ul class="nav-menu">
-                        <li><a href="../home">Главная</a></li>
-                        <li><a href="../about">О модпаке</a></li>
-                        <li><a href="../download">Скачать</a></li>
+                        <li><a href="../home">Home</a></li>
+                        <li><a href="../about">About us</a></li>
+                        <li><a href="../download">Download</a></li>
                         <li class="menu-has-children"><a class="active" href="">Wiki</a>
                             <ul>
-                                <li><a href="gt-addons">GregTech и аддоны</a></li>
+                                <li><a class="active">GregTech and Addons</a></li>
                             </ul>
                         </li>
                     </ul>
@@ -72,13 +72,11 @@
             <div class="col-lg-12">
                 <div class="section-title text-center">
                     <h1 class="p-black">Primitive Water Pump</h1>
-                    <h4 class="p-black">Примитивная водокачка</h4>
                     <hr>
                     <div class="tab-wiki menu" style="float: left;">
-                        <button class="tablinks" id="defaultOpen" onclick="openCity(event, 'Description')">Описание
-                        </button>
-                        <button class="tablinks" onclick="openCity(event, 'Mechanics')">Механика работы</button>
-                        <button class="tablinks" onclick="openCity(event, 'Schematics')">Постройка</button>
+                        <button class="tablinks" id="defaultOpen" onclick="openCity(event, 'Description')">Description</button>
+                        <button class="tablinks" onclick="openCity(event, 'Mechanics')">Uses/Functions</button>
+                        <button class="tablinks" onclick="openCity(event, 'Schematics')">Construction</button>
                     </div>
                 </div>
             </div>
@@ -90,17 +88,12 @@
                     <div id="bg-left"></div>
                     <div id="bg-right"></div>
                     <div id="content-left">
-                        Примитивная водокачка - это многоблочная машина, добавленная модификацией Impact Core.</br>
-                        <hr>
-                        Предназначена для генерации воды на начальных этапах и в трудодоступных местах без
-                        электропитания.
-
-
+                        Designed to generate water at the initial stages and in hard-to-reach places without power supply.
                     </div>
                     <div id="content-right">
 
                         <img class="img-fluid" src="../../img/wiki/primwaterpump.png" style="transform: scale(-1, 1)">
-                        <p>Primitive Water Pump в собранной форме</p>
+                        <p>Primitive Water Pump finished structure</p>
 
                     </div>
                 </div>
@@ -113,20 +106,20 @@
                     <div id="bg-left"></div>
                     <div id="bg-right"></div>
                     <div id="content-left">
-                        Машина генерирет воду без электричества в зависимости от биома в котором находится контролер.
+                        The machine generates water without electricity depending on the biome in which the controller is located.
                         <hr>
 
-                        <p style="font-weight: bold; margin-bottom: -5px">Коэффициент генерации воды:</p><br>
-                        Коэффициент генерации воды - h.
-                        Коэффициент изменяется с помощью Output Hatch:
+                        <p style="font-weight: bold; margin-bottom: -5px">Water generation coefficient:</p><br>
+                        Water generation coefficient - h.
+                        The ratio is changed using Output Hatch:
                         <li>Pump Output Hatch: h = 1</li>
                         <li>ULV Output Hatch: h = 2</li>
                         <li>LV Output Hatch: h = 3</li>
 
                         <br>
-                        <p style="font-weight: bold; margin-bottom: -5px">Биомный коэффициент:</p><br>
-                        Биомный коэффициент - b.
-                        Коэффициент изменяется с помощью биома, в котором находится контролер:
+                        <p style="font-weight: bold; margin-bottom: -5px">Biome Coefficient:</p><br>
+                        Biome coefficient - b.
+                        The coefficient is changed using the biome in which the controller is located:
                         <li>Ocean, River: b = 1000 L/s</li>
                         <li>Swamplant: b = 800 L/s</li>
                         <li>Jungle: b = 350 L/s</li>
@@ -134,31 +127,20 @@
                         <li>Plains, Forest: b = 250 L/s</li>
                         <li>Taiga: b = 175 L/s</li>
                         <li>Beach: b = 170 L/s</li>
-                        <li>Остальные: b = 100 L/s</li>
+                        <li>Other: b = 100 L/s</li>
 
                         <br>
-                        <p style="font-weight: bold; margin-bottom: -5px">Генерации воды:</p><br>
-                        Вода генерируется при двух показателях (коэффициентах) по следующей формуле:<br>
-                        Генерация воды (L/s) = h * b
+                        <p style="font-weight: bold; margin-bottom: -5px">Water generation:</p><br>
+                        Water is generated at two coefficients according to the following formula:<br>
+                        Water generation (L/s) = h * b
 
                     </div>
                     <div id="content-right">
-                        <p style="padding-top: 10px; padding-bottom: 8px">
-                            <b style="color: black;">Пример генерации воды</b>
-                        </p>
-                        <p style="text-align: justify;">
-                            В биоме Plains c Pump Output Hatch генерация воды будет равна:<br>
-                            <em>Генерация воды = 250 * 1 = 250 L/s.</em>
-                        </p>
-                        <p style="text-align: justify;">
-                            В биоме River c LV Output Hatch генерация воды будет равна:<br>
-                            <em>Генерация воды = 1000 * 3 = 3000 L/s.</em>
-                        </p>
                         <p style="padding-top: 10px; padding-bottom: 8px;">
-                            <b style="color: black;">Калькулятор генерации воды</b><br>
+                            <b style="color: black;">Water Generation Calculator</b><br>
                         </p>
                         <select id="biomewater" style="width: 100%; margin-bottom: 8px;" type="text">
-                            <option disabled selected value="Биом">Выберите Biome</option>
+                            <option disabled selected value="Биом">Select Biome</option>
                             <option value="1000">Ocean, River</option>
                             <option value="175">Taiga</option>
                             <option value="350">Jungle</option>
@@ -166,17 +148,17 @@
                             <option value="300">Snow, Iceland</option>
                             <option value="170">Beach</option>
                             <option value="250">Plains, Forest</option>
-                            <option value="100">Другие</option>
+                            <option value="100">Other</option>
                         </select>
 
 
                         <select id="tierwater" style="width: 100%; margin-bottom: 8px;" type="text">
-                            <option disabled selected value="Хэтч">Выберите Output Hatch</option>
+                            <option disabled selected value="Хэтч">Select Output Hatch</option>
                             <option value="1">Pump Output Hatch</option>
                             <option value="2">ULV Output Hatch</option>
                             <option value="3">LV Output Hatch</option>
                         </select>
-                        <button onclick="primitiveWater()" style="margin-top: 10px;">Рассчитать</button>
+                        <button onclick="primitiveWater()" style="margin-top: 10px;">Calculate</button>
                         <p id="totalwater"></p>
                     </div>
                 </div>
@@ -190,17 +172,17 @@
                     <div id="bg-left"></div>
                     <div id="bg-right"></div>
                     <div id="content-left">
-                        Для постройки этого мультиблока вам понадобятся 2 типа блоков: Primitive Pump Deck и Wood Frame
-                        Box.<br>
+                        To build this multiblock you will need blocks: Primitive Pump Deck и Wood Frame Box.<br>
                         <hr>
-                        Output Hatch (устанавливается в красном квадрате на голограмме):
-                        Остальные люки обслуживания не требуются.<br>
+                        Output Hatch (installed in a red square on the hologram):
+                        The rest of the service hatches are not required.<br>
 
-                        <br>*Не забудьте включить мультиблок с помощью Soft Mallet
-                        <hr>
+                        <br>*Don't forget to enable multiblock with Soft Mallet
 
-                        <p>Для включения голограммы (подсказка при постройке) используйте Multiblock Machine Blueprint
-                            из мода TecTech, кликните им по контролеру мультиблока.</p>
+                        <p>
+                            To enable the hologram (hint when building), use the Multiblock Machine Blueprint
+                            from the TecTech mod, click it on the multiblock controller.
+                        </p>
 
                     </div>
                     <div id="content-right">
